# neural-analyst

./: .dockerignore  .gitignore  COMPREHENSIVE_AUDIT_AND_ROADMAP.md  LICENSE  Makefile  README.md  docker-compose.celery.yml  docker-compose.minio.yml  docker-compose.yml  render.yaml
ai-data-analyst/backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.optional.txt  requirements.txt
ai-data-analyst/backend/app/: __init__.py  main.py
ai-data-analyst/backend/app/agents/: __init__.py  base_agent.py  causal_agent.py  data_quality_agent.py  eda_agent.py  ml_agent.py  nl2sql_agent.py  nlp_agent.py  orchestrator.py  statistical_agent.py  timeseries_agent.py  visualization_agent.py
ai-data-analyst/backend/app/agents/data_adequacy/: config.py  manager.py
ai-data-analyst/backend/app/api/: __init__.py
ai-data-analyst/backend/app/api/routes/: __init__.py  analyses.py  analytics.py  artifacts.py  auth.py  billing.py  chat.py  connections.py  dashboard.py  ml.py  (+7 more)
ai-data-analyst/backend/app/compute/: __init__.py  artifacts.py  executor.py  plans.py  registry.py
ai-data-analyst/backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  metrics.py  redaction.py  serialization.py
ai-data-analyst/backend/app/ml/: __init__.py  ab_testing.py  advanced_anomaly_detection.py  advanced_forecasting.py  advanced_parsers.py  advanced_segmentation.py  advanced_statistical_tests.py  alert_manager.py  anomaly_detection.py  anova_analysis.py  association_rules.py  auto_ml_engine.py  automated_insights.py  automl.py  basket_analysis.py  benchmark_analysis.py  benchmarking.py  bi_metrics.py  bivariate_analysis.py  causal_inference.py  churn_prediction.py  clustering_quality.py  cohort_analysis.py  cohort_retention.py  correlation_analysis.py  custom_aggregations.py  customer_analytics.py  customer_lifetime_value.py  data_catalog.py  data_comparison.py  data_enrichment.py  data_lineage.py  data_masking.py  data_profiling.py  data_quality.py  data_quality_report.py  data_sampling.py  data_transformation.py  data_validation.py  deep_learning.py  (+63 more)
ai-data-analyst/backend/app/models/: __init__.py  database.py
ai-data-analyst/backend/app/services/: __init__.py  analysis_execution.py  analysis_report.py  artifact_index.py  auth_service.py  base_repository.py  cache_service.py  data_connectors.py  data_ingestion.py  database.py  dataset_loader.py  dataset_processing.py  dataset_purge.py  dataset_transform.py  dataset_transform_suggestions.py  dataset_transformations.py  external_connection_runtime.py  insight_extraction.py  job_service.py  llm_service.py  ml_task_inference.py  narrator.py  object_store.py  query_optimizer.py  report_generator.py  secret_crypto.py  sql_safety.py  storage_gc.py  subscription_service.py
ai-data-analyst/backend/app/utils/: __init__.py  hashing.py
ai-data-analyst/backend/app/workers/: __init__.py  celery_app.py  dispatcher.py
ai-data-analyst/backend/migrations/: env.py
ai-data-analyst/backend/migrations/versions/: 022998a69b80_add_connections_and_dataset_versions.py  1b2f9df9b0b4_add_artifact_operator_params_hash.py  27de10180dec_initial_schema.py  4c1e9e67e3d7_backfill_artifact_operator_params_hash.py  6a0d8f0a4d53_add_dataset_purge_job_type.py  8c6fd0a40d1a_add_artifact_shares.py
ai-data-analyst/backend/tests/: __init__.py  conftest.py  synthetic_data_generator.py  test_analysis_actions.py  test_artifact_cache.py  test_business_analytics_modules.py  test_compute_operators.py  test_config_settings.py  test_data_quality_modules.py  test_dataset_purge.py  test_dataset_sql_query.py  test_dataset_transform_suggestions.py  test_dataset_transformations.py  test_edge_cases.py  test_infrastructure_modules.py  test_metrics_collector.py  test_ml_modules.py  test_ml_task_inference.py  test_p0_integration_grounding.py  test_production_qa_matrix.py  test_report_shares.py  test_response_quality_eval.py  test_secret_crypto.py  test_sql_safety.py  test_statistical_modules.py  test_storage_gc.py  test_storage_gc_s3.py  test_subscription_service.py  test_talk_to_data_user_flow.py
(+193 files in other folders)
